--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -8,17 +8,21 @@
 /* body{
     font-family: "Avenir Next", Avenir, "Helvetica Neue", Helvetica, "Lantinghei SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", "STHeiti", "WenQuanYi Micro Hei", SimSun, sans-serif;
 } */
-*{
-    text-align: center;
-    margin: 0;
-    padding: 0;
+* {
+  text-align: center;
+  margin: 0;
+  padding: 0;
 }
 ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
-li{
-    padding: 0;
-    margin: 0;
+li {
+  padding: 0;
+  margin: 0;
 }
+/* div,
+p {
+  word-break: break-all;
+} */
